--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
       - "5432:5432"
     volumes:
       - ./postgresql_data:/var/lib/postgresql/data
+  new_db_version:
+    image: postgres:16
+    volumes:
+      - ./postgresql_new_data:/var/lib/postgresql/data
   proxy:
     image: nginx:latest
     ports:
