--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-files = "0.6.6"
 actix-web = "4.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tera = "1.20.0"
