--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,14 @@ edition = "2021"
 
 [dependencies]
 actix-files = "0.6.6"
+actix-session = { version = "0.9", features = [
+  "cookie-session",
+  "redis-rs-session",
+  "redis-rs-tls-session",
+  "redis-actor-session",
+] }
 actix-web = "4.8.0"
+env_logger = "0.11.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tera = "1.20.0"
