--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,6 @@
 version: "3.5"
 
 services:
-  aplikasi:
-    image: localhost/b2rust
-    environment:
-      DATABASE_URL: postgres://postgres:example@database/b2rust
-    ports:
-      - "8080:8080"
   database:
     image: postgres:15
     environment:
@@ -16,10 +10,10 @@ services:
       - "5432:5432"
     volumes:
       - ./postgresql_data:/var/lib/postgresql/data
-  new_db_version:
-    image: postgres:16
-    volumes:
-      - ./postgresql_new_data:/var/lib/postgresql/data
+  in_memory_db:
+    image: redis:7
+    ports:
+      - "6379:6379"
   proxy:
     image: nginx:latest
     ports:
