--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Postgres
-DATABASE_URL=postgres://postgres:example@localhost/b2rust
+DATABASE_URL=postgres://postgres:example@localhost:5432/b2rust
