--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ actix-web = "4.8.0"
 env_logger = "0.11.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
 tera = "1.20.0"
