--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
 tera = "1.20.0"
+uuid = { version = "1.10.0", features = ["serde"]}
